src/objects/ProductPack__c.object
<CustomObject>
    <description>Core: Captures Product Pack information</description>
    <fields>
        <fullName>Pack_ISBN__c</fullName>
        <description>CORE</description>
        <formula>Product_Pack__r.ISBN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pack ISBN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage_of_Price__c</fullName>
        <description>Core: The percentage of the product pack price that this title contributes</description>
        <label>Percentage of Price</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Pack__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Core: the Procuct2 record that contains the pack information / detail</description>
        <label>Product Pack</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Related Products</relationshipLabel>
        <relationshipName>Product_Packs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>CORE</description>
        <label>Quantity</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title_ISBN__c</fullName>
        <description>CORE</description>
        <formula>Title__r.ISBN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title ISBN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Core: Product2 record that is contained in this pack</description>
        <label>Title</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Available in Product Packs</relationshipLabel>
        <relationshipName>Product_Packs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>CORE</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Pack Component</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Product Pack</label>
    <nameField>
        <displayFormat>PP-{0000000}</displayFormat>
        <label>Product Pack Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Packs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>